testing pike-iam

--- a/.github/workflows/test-pike-iam.yml
+++ b/.github/workflows/test-pike-iam.yml
@@ -1,4 +1,4 @@
-name: VPC Network Firewall Test
+name: Required IAM generator
 on:
   pull_request:
     branches: [ 'main' ]
@@ -31,24 +31,6 @@ jobs:
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: '1.5.7'  # Using 1.5.7 to match ~>1.5.5 requirement
-
-#      - name: Configure AWS credentials for GovCloud
-#        uses: aws-actions/configure-aws-credentials@v4
-#        with:
-#          role-to-assume: arn:aws-us-gov:iam::358745275192:role/github-action-test-role
-#          role-session-name: GitHub_to_AWS_FederatedOIDC
-#          aws-region: us-gov-west-1
-#          # Add this to improve authentication stability
-#          role-duration-seconds: 3600
-#
-#      - name: Verify AWS credentials
-#        run: |
-#          echo "Verifying AWS credentials..."
-#          aws sts get-caller-identity
-#          echo "Checking available VPCs..."
-#          aws ec2 describe-vpcs --region us-gov-west-1 --max-items 5
-#          echo "Checking IAM permissions..."
-#          aws iam list-role-policies --role-name github-action-test-role || echo "Cannot list role policies"
 
       - name: IAM Pike Scan
         if: always()
