--- a/.github/workflows/org-tree-readme.yml
+++ b/.github/workflows/org-tree-readme.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install tree
         run: sudo apt-get update && sudo apt-get install -y tree
       
-      # Create the tree script with exact formatting
+      # Create a simplified tree script that produces the exact format you want
       - name: Create tree script
         run: |
           cat > update-readme-tree.sh <<'EOF'
@@ -23,65 +23,18 @@ jobs:
           if [ -f readmetreerc.yml ]; then
             file_names=$(grep -A5 "fileNames:" readmetreerc.yml | grep -v "fileNames:" | sed 's/^[ \t]*-[ \t]*//' | tr -d ' ')
             chapter=$(grep "chapter:" readmetreerc.yml | cut -d':' -f2 | tr -d ' ')
-            include_dirs=$(grep -A5 "include:" readmetreerc.yml | grep -v "include:" | sed 's/^[ \t]*-[ \t]*//' | tr -d ' ' | tr '\n' ' ')
           else
             file_names="README.md"
             chapter="Tree"
-            include_dirs="."
           fi
           
-          # Generate tree structure with the exact format required
-          tree_output=$(tree -a -I ".git|node_modules|.github" --noreport --charset ascii .)
+          # Generate the basic tree structure (without including hidden files by default)
+          tree_output=$(tree -I ".git|node_modules|.github" --noreport --charset ascii .)
           
-          # Format the tree with asterisks instead of pipe characters and create proper markdown links
-          formatted_tree=$(echo "$tree_output" | 
-            # Replace the first line with just a dot
-            sed '1s/^.*$/\./' |
-            # Replace the tree symbols with proper bullet points and indentation
-            sed -E 's/├── / * /g' | 
-            sed -E 's/│   /   /g' | 
-            sed -E 's/└── / * /g' | 
-            sed -E 's/    /   /g' |
-            # Convert filenames to markdown links but keep only the filename in the link text
-            awk '{
-              if (NR > 1) {  # Skip the first line which is just "."
-                line=$0;
-                # Extract the path and create a markdown link
-                path=line;
-                gsub(/^[ ]*\* /, "", path);  # Remove the bullet and spaces
-                
-                # Check if it is a directory (ends with a directory name)
-                if (path ~ /\/$/) {
-                  # Remove the trailing slash for display
-                  display_path=path;
-                  gsub(/\/$/, "", display_path);
-                  
-                  # Create the link
-                  replacement=" * [" display_path "](./" path ")";
-                  # Remove the trailing slash in the link URL
-                  gsub(/\)\/\)/, "))", replacement);
-                  
-                  # Replace the original line with the link
-                  sub(/^[ ]*\* [^ ]+/, replacement, line);
-                } else {
-                  # Get just the filename for display
-                  split(path, parts, "/");
-                  filename=parts[length(parts)];
-                  
-                  # Create the link
-                  replacement=" * [" filename "](./" path ")";
-                  
-                  # Replace the original line with the link
-                  sub(/^[ ]*\* [^ ]+/, replacement, line);
-                }
-                print line;
-              } else {
-                print $0;  # Print the first line unchanged
-              }
-            }'
-          )
+          # Format the file_names variable
+          file_names=$(echo "$file_names" | tr ',' ' ')
           
-          # For each file specified in the config
+          # Update each file specified in the config
           for file_name in $file_names; do
             if [ ! -f "$file_name" ]; then
               echo "File $file_name not found, skipping."
@@ -89,9 +42,9 @@ jobs:
             fi
             
             # Create the final markdown tree block
-            final_tree="## ${chapter}\n\`\`\`\n${formatted_tree}\n\`\`\`"
+            final_tree="## ${chapter}\n\`\`\`\n${tree_output}\n\`\`\`"
             
-            # Update the README.md file
+            # Update the file with the new tree structure
             if grep -q "^## ${chapter}" "$file_name"; then
               # Find the line number of the Tree section
               start_line=$(grep -n "^## ${chapter}" "$file_name" | cut -d':' -f1)
@@ -105,13 +58,11 @@ jobs:
                 # Extract just the line number
                 next_section_line=$(echo "$next_section" | cut -d':' -f1)
                 # Adjust to be relative to the whole file
-                end_line=$((start_line + next_section_line))
+                end_line=$((start_line + next_section_line - 1))
               fi
               
               # Create a temporary file with content before the Tree section
-              head -n $start_line "$file_name" > temp_before.md
-              # Remove the actual "## Tree" line
-              sed -i '$ d' temp_before.md
+              head -n $((start_line-1)) "$file_name" > temp_before.md
               
               # Create a temporary file with content after the Tree section
               if [ $end_line -lt $(wc -l < "$file_name") ]; then
@@ -124,7 +75,7 @@ jobs:
               # Combine everything together
               {
                 cat temp_before.md
-                echo -e "\n${final_tree}"
+                echo -e "\n${final_tree}\n"
                 cat temp_after.md
               } > "$file_name"
               
