--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,4 +5,4 @@
 # the repo. Unless a later match takes precedence,
 # @douglas-f and @i-ate-a-vm will be requested for
 # review when someone opens a pull request.
-* @kourosh-forti-hands
+* @Coalfire-CF/cs-aws-codeowners  @Coalfire-CF/aws-pak-owners 
