--- a/.github/workflows/org-release.yml
+++ b/.github/workflows/org-release.yml
@@ -8,4 +8,4 @@ on:
 
 jobs:
   create-release:
-    uses: Coalfire-CF/Actions/.github/workflows/org-release.yml@main
+    uses: Coalfire-CF/Actions/.github/workflows/org-release.yml@v0.0.19
