chore: update CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,8 +1,27 @@
-# This is a comment.
-# Each line is a file pattern followed by one or more owners.
+# CODEOWNERS - Defines who must review and approve PRs for specific files/paths
+# Documentation: https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-code-owners
+#
+# IMPORTANT: Rules are evaluated top-to-bottom, and the LAST matching pattern takes precedence.
+# This means more specific rules should be placed AFTER general rules.
 
-# These owners will be the default owners for everything in
-# the repo. Unless a later match takes precedence,
-# @douglas-f and @i-ate-a-vm will be requested for
-# review when someone opens a pull request.
-* @Coalfire-CF/cs-aws-codeowners  @Coalfire-CF/aws-pak-owners 
+# =============================================================================
+# DEFAULT OWNERS
+# =============================================================================
+# The PAK (Product Area Knowledge) team and Cloud Codeowners own all files by default.
+# Any PR that doesn't match a more specific rule below will require their review.
+*                       @Coalfire-CF/aws-pak-owners @Coalfire-CF/CS-AWS-Codeowners
+
+# =============================================================================
+# GITHUB WORKFLOWS & ACTIONS
+# =============================================================================
+# The CoalForge team manages all CI/CD workflows and GitHub Actions.
+# Changes to automation should be reviewed by the platform team.
+/.github/workflows/     @Coalfire-CF/CoalForge
+
+# =============================================================================
+# LICENSE & LEGAL
+# =============================================================================
+# License changes require department head approval due to legal implications.
+# This ensures proper oversight for any licensing modifications.
+LICENSE                 @douglas-f
+
